--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,17 @@ services:
             - name: kafka
               url: http://connector:8083
     ports:
-      - "8080:8080"
+      - "8081:8080"
     depends_on:
       kafka:
         condition: service_healthy
+
+
+  swagger-ui:
+    image: swaggerapi/swagger-ui
+    ports:
+      - "8080:8080"
+    environment:
+      SWAGGER_JSON: /swagger.yml
+    volumes:
+      - ./swagger.yml:/swagger.yml
