--- a/tesodev-korpes/Dockerfile-consumer
+++ b/tesodev-korpes/Dockerfile-consumer
@@ -1,4 +1,21 @@
-FROM ubuntu:latest
-LABEL authors="Casper"
+FROM golang:1.22
 
-ENTRYPOINT ["top", "-b"]
+WORKDIR /app
+
+COPY go.mod .
+COPY go.sum .
+RUN go mod download
+
+COPY main.go .
+COPY CustomerService/ ./CustomerService/
+COPY ConsumerService/ ./ConsumerService/
+COPY OrderService/ ./OrderService/
+COPY pkg/ ./pkg/
+COPY docs/ ./docs/
+COPY shared/ ./shared/
+
+RUN go build -o /tesodev .
+
+EXPOSE 9092
+
+CMD ["consumer"]
