--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,4 @@
-version: '3.8'
-
 services:
-  # MongoDB Servisi
-  mongo:
-    image: mongo
-    restart: always
-    ports:
-      - 27017:27017
-    volumes:
-      - ./mongodb:/data/db
-
-  customer_service:
-    build:
-      context: ./tesodev-korpes
-      dockerfile: Dockerfile-customer
-    ports:
-      - "1923:1907"  # 1923 dış port, 1907 konteyner portu
-    depends_on:
-      - mongo
-      - kafka
-    environment:
-      MONGO_URL: mongodb://mongo:27017
-
-  order_service:
-      build:
-        context: ./tesodev-korpes
-        dockerfile: Dockerfile-order
-      ports:
-        - "1999:1881"
-      depends_on:
-        - mongo
-        - kafka
-      environment:
-        MONGO_URL: mongodb://mongo:27017
-
-  consumer_service:
-      build:
-        context: ./tesodev-korpes
-        dockerfile: Dockerfile-consumer
-      ports:
-        - "1139:1938"
-      depends_on:
-        - mongo
-        - kafka
-      environment:
-        MONGO_URL: mongodb://mongo:27017
-
 
   # Zookeeper Servisi
   zookeeper:
@@ -77,7 +30,7 @@ services:
       zookeeper:
         condition: service_healthy
     ports:
-      - 9092:9092
+      - 29092:9092
     environment:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
@@ -112,46 +65,41 @@ services:
         condition: service_healthy
 
 
-
   customer-service:
     build:
       context: ./tesodev-korpes/
-      dockerfile: Dockerfile
-    command:
-      - /tesodev
-      - customer
+      dockerfile: Dockerfile-customer
+    command: [ "/tesodev", "customer" ]
     ports:
-      - "8001:8001"
-    network_mode: "host"
-    depends_on:
-      - mongo
-      - kafka
+      - "1923:1907"
+    environment:
+      - KAFKA_BROKER=kafka:9092
 
 
   order-service:
     build:
       context: ./tesodev-korpes/
-      dockerfile: Dockerfile
-    command:
-      - /tesodev
-      - order
+      dockerfile: Dockerfile-order
+    command: ["/tesodev", "order" ]
     ports:
-      - "8002:8002"
-    network_mode: "host"
-    depends_on:
-      - mongo
-      - kafka
+      - "1999:1881"
+    environment:
+      - KAFKA_BROKER=kafka:9092
+
 
   consumer-service:
     build:
       context: ./tesodev-korpes/
-      dockerfile: Dockerfile
-    command:
-      - /tesodev
-      - consumer
+      dockerfile: Dockerfile-consumer
+    command: ["/tesodev", "consumer" ]
     ports:
-      - "9092:9092"
-    network_mode: "host"
+      - "1139:1938"
     depends_on:
-      - mongo
       - kafka
+    environment:
+      - KAFKA_BROKER=kafka:9092
+
+
+networks:
+  app-network:
+    driver: bridge
